--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,27 @@
+accelerate==1.1.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+cloudpickle==3.1.0
+dask==2024.11.2
+dask-expr==1.1.19
+datasets==3.1.0
+dill==0.3.8
 filelock==3.16.1
+frozenlist==1.5.0
 fsspec==2024.10.0
 huggingface-hub==0.26.2
 idna==3.10
 Jinja2==3.1.4
+locket==1.0.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 networkx==3.4.2
 numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
@@ -23,6 +38,10 @@ nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 packaging==24.2
 pandas==2.2.3
+partd==1.4.2
+propcache==0.2.0
+psutil==6.1.0
+pyarrow==18.1.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
@@ -31,8 +50,10 @@ requests==2.32.3
 safetensors==0.4.5
 setuptools==75.6.0
 six==1.16.0
+swifter==1.4.0
 sympy==1.13.1
 tokenizers==0.20.3
+toolz==1.0.0
 torch==2.5.1
 tqdm==4.67.1
 transformers==4.46.3
@@ -42,6 +63,5 @@ triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
-
-datasets~=3.1.0
-swifter~=1.4.0
+xxhash==3.5.0
+yarl==1.18.0
