--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==1.1.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.7
 aiosignal==1.3.1
+annotated-types==0.7.0
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -10,19 +11,24 @@ cloudpickle==3.1.0
 dask==2024.11.2
 dask-expr==1.1.19
 datasets==3.1.0
+deepspeed==0.16.0
 dill==0.3.8
 filelock==3.16.1
 frozenlist==1.5.0
 fsspec==2024.10.0
+hjson==3.1.0
 huggingface-hub==0.26.2
 idna==3.10
 Jinja2==3.1.4
 locket==1.0.0
 MarkupSafe==3.0.2
+mpi4py==4.0.1
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.1.0
 multiprocess==0.70.16
 networkx==3.4.2
+ninja==1.11.1.2
 numpy==2.1.3
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
@@ -41,7 +47,10 @@ pandas==2.2.3
 partd==1.4.2
 propcache==0.2.0
 psutil==6.1.0
+py-cpuinfo==9.0.0
 pyarrow==18.1.0
+pydantic==2.10.2
+pydantic_core==2.27.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
