--- a/requirements.txt
+++ b/requirements.txt
@@ -2,48 +2,93 @@ accelerate==1.1.1
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.8
 aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==4.7.0
 attrs==24.2.0
+blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+cloudpickle==3.1.0
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+dask==2024.12.0
+dask-expr==1.1.20
 datasets==3.1.0
 dill==0.3.8
+distro==1.9.0
 filelock==3.16.1
+Flask==3.0.3
 frozenlist==1.5.0
 fsspec==2024.9.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.26.3
 idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
+jiter==0.8.2
+locket==1.0.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.16
+nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.1.3
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+openai==1.57.3
 packaging==24.2
 pandas==2.2.3
+partd==1.4.2
 peft==0.13.2
+plotly==5.24.1
 propcache==0.2.0
 psutil==6.1.0
 pyarrow==18.1.0
+pydantic==2.10.3
+pydantic_core==2.27.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
+retrying==1.3.4
 safetensors==0.4.5
+setuptools==75.6.0
 six==1.16.0
+sniffio==1.3.1
+swifter==1.4.0
 sympy==1.13.1
+tenacity==9.0.0
 tokenizers==0.20.3
+toolz==1.0.0
 torch==2.5.1
 tqdm==4.67.1
 transformers==4.46.3
+tree-sitter==0.21.3
+tree-sitter-languages==1.10.2
+triton==3.1.0
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+Werkzeug==3.0.6
 xxhash==3.5.0
 yarl==1.18.0
-tree-sitter-languages~=1.10.2
-tree-sitter~=0.21.3
-dash~=2.18.2
-dash-bootstrap-components~=1.6.0
-openai~=1.57.3
+zipp==3.21.0
